# projeto-embarcatech

./: CMakeLists.txt  projeto_embarcatech.c
